<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.openapis</groupId>
    <artifactId>hy.common.xjava</artifactId>
    <version>4.3.4</version>
    <packaging>jar</packaging>

    <name>cn.openapis.hy.common.xjava</name>
    <!-- https://gitee.com/HY-ZhengWei/hy.common.xjava -->
    <url>https://github.com/HY-ZhengWei/hy.common.xjava</url>
    <description>cn.openapis.hy.common.xjava</description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <distributionManagement>
        <snapshotRepository>
            <id>maven-public</id>
            <name>oss sonatype snapshots</name>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>

        <repository>
            <id>maven-public</id>
            <name>oss sonatype releases</name>
            <url>https://s01.oss.sonatype.org/content/repositories/releases/</url>
        </repository>
    </distributionManagement>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>actable</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Zheng Wei</name>
            <email>HY.ZhengWei@qq.com</email>
            <url>https://github.com/HY-ZhengWei</url>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.base</artifactId>
            <version>1.0.171</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.file</artifactId>
            <version>1.2.4</version>
            <scope>provided</scope>
        </dependency>
        
        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.db</artifactId>
            <version>2.6.7</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.tpool</artifactId>
            <version>1.3.4</version>
            <scope>provided</scope>
        </dependency>
        
        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.net</artifactId>
            <version>3.0.4</version>
            <scope>provided</scope>
        </dependency>
        
        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.license</artifactId>
            <version>1.1.7</version>
            <scope>provided</scope>
        </dependency>
        
        <dependency>
            <groupId>cn.openapis</groupId>
            <artifactId>hy.common.xcql</artifactId>
            <version>1.0.0</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- Oracle -->
        <dependency>
            <groupId>com.oracle</groupId>
            <artifactId>ojdbc14</artifactId>
            <version>10.2.0.1.0</version>
            <optional>true</optional>
        </dependency>
        
        <!-- Struts -->
        <dependency>
            <groupId>org.apache.struts.xwork</groupId>
            <artifactId>xwork-core</artifactId>
            <version>2.3.34</version>
            <optional>true</optional>
        </dependency>
        
        <!-- Spring -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>5.3.13</version>
            <optional>true</optional>
        </dependency>
        
        <!-- Spring Boot -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>2.6.1</version>
            <optional>true</optional>
        </dependency>
        
        <!-- Drools -->
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-core</artifactId>
            <version>7.73.0.Final</version>
        </dependency>
        
        <!-- Drools -->
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-core-dynamic</artifactId>
            <version>7.73.0.Final</version>
        </dependency>
        
        <!-- Drools -->
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-core-reflective</artifactId>
            <version>7.73.0.Final</version>
        </dependency>
        
        <!-- Drools -->
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-decisiontables</artifactId>
            <version>7.73.0.Final</version>
        </dependency>
        
        <!-- Drools -->
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-compiler</artifactId>
            <version>7.73.0.Final</version>
        </dependency>
        
        <!-- Drools -->
        <dependency>
            <groupId>org.kie</groupId>
            <artifactId>kie-api</artifactId>
            <version>7.73.0.Final</version>
        </dependency>
        
        <!-- Drools -->
        <dependency>
            <groupId>org.kie</groupId>
            <artifactId>kie-ci</artifactId>
            <version>7.73.0.Final</version>
        </dependency>
        
        <!-- Drools -->
        <dependency>
            <groupId>org.kie</groupId>
            <artifactId>kie-internal</artifactId>
            <version>7.73.0.Final</version>
        </dependency>
        
        <!-- Reduce 2.4.7 to 1.1.1 for greater compatibility (e.g. ASM) -->
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>json-smart</artifactId>
            <version>2.4.7</version>
        </dependency>
        
        <dependency>
            <groupId>org.eweb4j</groupId>
            <artifactId>fel</artifactId>
            <version>0.8</version>
        </dependency>
        
        <!-- Restful -->
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-server</artifactId>
            <version>2.9</version>
            <optional>true</optional>
        </dependency>
        
        <!-- Restful -->
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>javax.ws.rs-api</artifactId>
            <version>2.0</version>
            <optional>true</optional>
        </dependency>
        
        <!-- Restful -->
        <dependency>
            <groupId>org.glassfish.hk2.external</groupId>
            <artifactId>javax.inject</artifactId>
            <version>2.3.0-b05</version>
            <optional>true</optional>
        </dependency>
        
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>3.0-alpha-1</version>
            <scope>provided</scope>
        </dependency>
        
        <dependency>
            <groupId>net.sourceforge.htmlcleaner</groupId>
            <artifactId>htmlcleaner</artifactId>
            <version>2.26</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>com.mchange</groupId>
            <artifactId>c3p0</artifactId>
            <version>0.9.5.5</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>net.sourceforge.jtds</groupId>
            <artifactId>jtds</artifactId>
            <version>1.3.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <scm>
        <tag>master</tag>
        <url>git@github.com:HY-ZhengWei/hy.common.xjava.git</url>
        <connection>git@github.com:HY-ZhengWei/hy.common.xjava.git</connection>
        <developerConnection>git@github.com:HY-ZhengWei/hy.common.xjava.git</developerConnection>
    </scm>
    
    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/LICENSE</include>
                    <include>**/*.xml</include>
                    <include>**/*.html</include>
                    <include>**/*.txt</include>
                    <include>**/*.ini</include>
                    <include>**/*.json</include>
                    <include>**/*.properties</include>
                    <include>**/*.md</include>
                    <include>**/*.MF</include>
                    <include>**/*.js</include>
                    <include>**/*.css</include>
                    <include>**/*.map</include>
                    <include>**/*.png</include>
                    <include>**/*.gif</include>
                    <include>**/*.eot</include>
                    <include>**/*.svg</include>
                    <include>**/*.ttf</include>
                    <include>**/*.woff</include>
                    <include>**/*.woff2</include>
                </includes>
            </resource>

            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
        </resources>
    
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>